--- a/ElementRemoval/index.html
+++ b/ElementRemoval/index.html
@@ -6,8 +6,8 @@ function removeEveryOther(arr) {
      }
      return result;  
  }
-
-
+great answer
+ const removeEveryOther = arr => arr.filter((_, i) => !(i % 2));
 
 
 
