--- a/Square(n) Sum/index.html
+++ b/Square(n) Sum/index.html
@@ -1,7 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    function squareSum(numbers){
+        return numbers.reduce((a, x) => a + (x*x), 0);
+        }
+    }
+</body>
+</html>
 <!--Complete the square sum function so that it squares each number passed into it and then sums the results together.
 For example, for [1, 2, 2] it should return 9 because 1^2 + 2^2 + 2^2 = 9.*/-->
 
-function squareSum(numbers){
-    return numbers.reduce((a, x) => a + (x*x), 0);
-    }
-}
+
